# teams_alert

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
teams_alert/: send_card.py  templates.py
teams_alert.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_send_card.py
