[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teams_alert"
version = "0.1.10"
description = "A simple package to send messages or alerts to MS Teams channels."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Andrew Pruet", email = "james_pruet@oxy.com" },
]
keywords = ["teams", "package", "pip", "MS", "Microsoft"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "idna==3.10",
    "requests==2.32.3",
    "typing==3.7.4.3",
    "urllib3==2.2.3"
]

[project.urls]
"Homepage" = "https://github.com/jimbo-p/teams_alert"
"Bug Tracker" = "https://github.com/jimbo-p/teams_alert/issues"
